# genai-projects

./: .gitignore  MANIFEST.in  pyproject.toml
config/: read_first.txt
docs/: read_first.txt
scripts/: read_first.txt
src/agentic_coding/: completion_anthropic.py  completion_litellm.py  completion_openai.py  completion_request.py  function_call.py
src/langchain_agent/: langChainBeginner.py  langchainAgent.py  longChainBeginner_template_team.json  quickStart.py  responsefunctions.py
src/llm_beginner_app/: chatbot.py  gtp4o.py  pe_for_dev_beginning.py
src/mashiIndex/: .gitignore  .rooignore  pyproject.toml
src/roo_codebase_rag/: .gitignore  SOLUTION copy.md  pyproject.toml  qdrantsetup-qwen3-4b.py  qwen3-4b-api.py  setup-4b-complete.sh  setup-4b-step3.sh  setup-4b-step4.sh  setup-4b-step5.sh  setup-4b-step6.sh  setup-step4.sh  test_qwen_features-4b.py
src/roo_codebase_rag/index-script-gemini/: index-with-chomadb.py
src/snowfalke/: DataStrategySurveyAnalysis.py  benchmark_charts.py  editableTable4ForecastingAndChart.py  temp.sql
src/streamlit/: PerdictionWithSK.py  altair.py  line_chart.py  snowflake_benchmark_local.py  stBasic.py
src/streamlit/LLM/: LLM_portal_entry.py
src/streamlit/LLM/pages/: LangchainBeginner.py
