# This file tells Python what's needed to build your project.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is your project's main metadata (PEP 621)
[project]
name = "Mashi-Indexing"
description = "Index the mashi"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13.7"
license = "MIT"

# no need to 
dependencies = [
  "python-dotenv",
  "fastapi>=0.104.0",
  "requests>=2.31.0",
  "numpy<2.0.0",
  "pydantic>=2.0.0",
  "uvicorn[standard]>=0.24.0",

  # Vector Stores
  "qdrant-client>=1.7.0",
  "chromadb", # embedding database
  "ollama",
]

# --- Hatch Environment Configuration ---

# This is the "default" environment you get when you run `hatch shell` with out specify the venv name
# it will go here 
# We add common development tools here.
[tool.hatch.envs.default]
# The "Set it and Forget it" way to create the hatch venv
# configure hatch to create the virtual environment inside your project folder (in a .venv folder). 
# VS Code automatically detects .venv folders, so Pylance will work instantly without manual configuration.
# This forces the venv to be created in a .venv folder in your project root
type = "virtual"
path = ".venv/default"
workspace.members = [
  "src/*",
  "projects/*"
]



